open geolink on click + minor refactoring
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/assets/leafletMapMessagePreview.html
+++ b/app/src/main/assets/leafletMapMessagePreview.html
@@ -14,28 +14,29 @@
         </style>
     </head>
     <body>
-        <div id="map"></div>
+        <div id="map" ></div>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script>
             var queryString = window.location.search;
 
             const urlParams = new URLSearchParams(queryString);
-            var lat = urlParams.get('lat')
-            var lon = urlParams.get('lon')
-            var name = urlParams.get('name')
+            var locationLat = urlParams.get('locationLat')
+            var locationLon = urlParams.get('locationLon')
+            var locationGeoLink = urlParams.get('locationGeoLink')
             var mapProviderUrl = urlParams.get('mapProviderUrl')
             var mapProviderAttribution = urlParams.get('mapProviderAttribution')
 
-            var map = L.map('map', { zoomControl: false }).setView([lat, lon], 13);
+            var map = L.map('map', {
+                    zoomControl: false,
+                    scrollWheelZoom: false
+                }).setView([locationLat, locationLon], 13);
             map.dragging.disable();
 
             L.tileLayer(mapProviderUrl, {
                 attribution: '&copy; ' + mapProviderAttribution
             }).addTo(map);
 
-            L.marker([lat, lon]).addTo(map);
-
-
+            L.marker([locationLat, locationLon]).addTo(map);
         </script>
     </body>
 </html>
